--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -16,6 +18,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SwasthPunjab"
         tools:targetApi="31">
+        <activity
+            android:name=".MainActivity0"
+            android:exported="false" />
+        <activity
+            android:name=".PatientHistory"
+            android:exported="false" />
+        <activity
+            android:name=".Medical_Shop_list"
+            android:exported="false" />
         <activity
             android:name=".opening"
             android:exported="true">
@@ -39,8 +50,7 @@
             android:exported="false" />
         <activity
             android:name=".main1"
-            android:exported="false">
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".Dashboard"
             android:exported="false" />
